# nusaca

./: .env.example  .gitignore  Cargo.toml
bmkg_opendata/: Cargo.toml
bmkg_opendata/src/: lib.rs  main.rs  model.rs  scraper.rs
docs/: openapi.yml
entity/: Cargo.toml
entity/src/: city.rs  lib.rs  mod.rs  prelude.rs  province.rs  region.rs  weather_issued.rs  weather_parameter.rs  weather_prediction.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  schema.rs
src/: lib.rs  main.rs  response.rs  scraper.rs
src/base/: response.rs
src/infrastructure/: database.rs  state.rs
src/models/: summary.rs
src/routes/: mod.rs  parameter.rs  region.rs  summary.rs  weather.rs
src/use_cases/: region.rs  summary.rs
